2010-05-20  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (matrix-elt): Ensured that new elements are coerced
	to double in the setf-expander.

	* vector.lisp (elt): Coerces the new value to a double in the
	setf-expander.
	(initialise-data): Ensure that the vector's elements are
	initialised and set to double.
	(make-vector): Ensure the the initial-elements are coerced to a
	double.

	* matrix.lisp (initialise-data): Ensure that the matrix elements
	are initialised, and that the matrix is an appropriate type.

	* generics.lisp (equivalent): Added an IGNORE statement to fix a
	warning in CLISP

2010-01-30  Rudy Neeser  <rudy.neeser@gmail.com>

	* LICENSE: Updated to ensure that the license is "GPL, version 3,
	and later versions". This was originally intended, and is is the
	text in each individual source file.

	* README: Some minor updates relating to how the LICENSE is
	explained.

2010-01-27  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (matrix=): Added a function to compare matrix
	objects.
	(dimension): Added an implementation for MATRIX objects.

	* generics.lisp (copy): Added an implementation that copies lists.
	(equivalent): Added a generic function to test for equivalence
	between two objects.

	* vector.lisp (dimension): Renamed LENGTH to DIMENSION.
	(length): Created a new LENGTH function that is an alias to
	DIMENSION.
	(negate!): Added this for lists.

2010-01-26  Rudy Neeser  <rudy.neeser@gmail.com>

	* COPYING: Added a copy of the GPLv3.

	* LICENSE: Added the beginnings of a file discussing licensing.

	* README: Added the beginnings of a README file.

	* vector-operations.lisp (dot-product): Dot product can now
	operate on lists.
	(euclidean-distance): Updated to work with lists.

2010-01-22  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (normalise): Provided a version that operates on
	lists.
	(normalise!): Provided a version that operates on lists.

2009-12-18  Rudy Neeser  <rudy.neeser@gmail.com>
