@@ -101,7 +101,8 @@
 (defgeneric (setf x) (value vector)
   (:documentation "Sets the x component from an appropriately sized vector.")
   (:method ((value number) (vector vector))
-    (setf (cl:elt (slot-value vector 'data) 0) value))
+    (setf (cl:elt (slot-value vector 'data) 0)
+	  (coerce value 'double-float)))
   (:method ((value number) (vector list))
     (setf (first vector) value)))
 
@@ -117,7 +118,7 @@
 (defgeneric (setf y) (value vector)
   (:documentation "Sets the y component from an appropriately sized vector.")
   (:method ((value number) (vector vector))
-    (setf (cl:elt (slot-value vector 'data) 1) value))
+    (setf (cl:elt (slot-value vector 'data) 1) (coerce value 'double-float)))
   (:method ((value number) (vector list))
     (setf (second vector) value)))
 
@@ -133,7 +134,7 @@
 (defgeneric (setf z) (value vector)
   (:documentation "Sets the z component from an appropriately sized vector.")
   (:method ((value number) (vector vector))
-    (setf (cl:elt (slot-value vector 'data) 2) value))
+    (setf (cl:elt (slot-value vector 'data) 2) (coerce value 'double-float)))
   (:method ((value number) (vector list))
     (setf (third vector) value)))
 
@@ -146,7 +147,7 @@
 (defgeneric (setf w) (value vector)
   (:documentation "Sets the w component from an appropriately sized vector.")
   (:method ((value number) (vector vector))
-    (setf (cl:elt (slot-value vector 'data) 3) value)))
+    (setf (cl:elt (slot-value vector 'data) 3) (coerce value 'double-float))))
 
 (defmethod initialise-data ((vector vector) (size integer))
   (with-slots (data) vector
